revised academic page with css page

--- a/academic.html
+++ b/academic.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Academic Experience</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/academic.css">
+    <link rel="stylesheet" href="CSS/academic.css">
 </head>
 <body>
 <div class="container-fluid p-0 m-0">
@@ -18,98 +18,84 @@
                 <div class="col-md-3 background-color: #7CB342">
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
                 </div>
-                <div class="col-md-9 codeup p-10 background-color: #7CB342">
-                    <p>Codeup San Antonio, Texas (Virtual)</p>
-                    <p>Full Stack Web Developer</p>
-                    <p>2022 - 2023</p>
+                <div class="col-md-9 codeup w-100vw p-.5em">
+                    <p class="codeup_text">Codeup</p>
+                    <p class="codeup_text">San Antonio, Texas (Virtual)</p>
+                    <p class="codeup_text">Full Stack Web Developer</p>
+                    <p class="codeup_text">2022 - 2023</p>
+                    <p class="codeup_text">At Codeup, I received education and training as a Full Stack Web Developer.  I have become quite proficient in front end creation and am currently working on back-end and full program creation.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 background-color: #CFA314">
+                <div class="col-md-3">
                     <img src="Images/DeVry_Icon.jpg" alt="DeVry Icon" class="image">
                 </div>
-                <div class="col-md-9 devry p-10 background-color #CFA314">
-                    <p> DeVry College of New York</p>
-                    <p>New York City, New York 10016</p>
-                    <p>Computer Networking</p>
-                    <p>2015 – 2020</p>
+                <div class="col-md-9 devry w-100vw p-.5em">
+                    <p class="devry_text"> DeVry College of New York</p>
+                    <p class="devry_text">New York City, New York</p>
+                    <p class="devry_text">Computer Networking and basic classes</p>
+                    <p class="devry_text">2015 - 2020</p>
+                    <p class="devry_text">At DeVry College of New York I took many basic classes needed for entry into college courses.  I was unable to complete my degree as courses I needed to take were not compatible with the veteran program I was attending under.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 background-color: #00662F">
-                    <img src="Images/MCCC_Icon.jpg" alt="Mercer CCC Icon" class="image">
-                </div>
-                <div class="col-md-9 mercer p-10 background-color: #00662F">
-                    <p> Mercer County Community College Trenton, New Jersey</p>
-                    <p>Private Pilot</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 background-color: #172C7F">
+                <div class="col-md-3">
                     <img src="Images/CCAF_Icon.jpg" alt="Community College Of The Air Force Icon" class="image">
                 </div>
-                <div class="col-md-9 ccaf p-10 background-color: #172C7F">
-                    <p>Community College of The Air Force</p>
-                    <p>Various Locations</p>
-                    <p>Basic, Airman Leadership School</p>
-                    <p>Aviation Mechanic, Aerial Port</p>
-                    <p>1997 - 2012</p>
+                <div class="col-md-9 ccaf">
+                    <p class="ccaf_text">Community College of The Air Force</p>
+                    <p class="ccaf_text">Various Locations</p>
+                    <p class="ccaf_text">Basic, Airman Leadership School, Aviation Mechanic, Aerial Port</p>
+                    <p class="ccaf_text">1997 – 2012</p>
+                    <p class="ccaf_text">Throughout my career in the Air National Guard, in Nevada, California and New Jersey, I attained many skills.  I changed careers from Aerial Port back to vehicle mechanics and eventually into aircraft maintenance.  The military has taught me many skills in leadership, and working either alone or with a team to accomplish tasks and goals to complete a mission.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 background-color: #DC1311">
+                <div class="col-md-3">
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
-                <div class="col-md-9 usmc2 p-10 background-color: #DC1311">
-                    <p> Marine Corps Service Support Schools</p>
-                    <p>29 Palms, California</p>
-                    <p>1991</p>
-                    <p>M936 Wrecker Operator</p>
-                    <p>As Operation Desert Storm was winding down, I was sent to Wrecker Operator class in 29 Palms,
-                        California. I learned basic recovery techniques, welding (using arc welders and oxygen-acetylene
-                        torch), among other skills. I graduated and returned to my unit.</p>
+                <div class="col-md-9 usmc2 p-.5em">
+                    <p class="usmc2_text"> Marine Corps Service Support Schools</p>
+                    <p class="usmc2_text">29 Palms, California</p>
+                    <p class="usmc2_text">M936 Wrecker Operator</p>
+                    <p class="usmc2_text">1991</p>
+                    <p class="usmc2_text">As Operation Desert Storm was winding down, I was sent to Wrecker Operator class in 29 Palms, California.  I learned basic recovery techniques, welding (using arc welders and oxygen/acetylene torch), among other skills.  I graduated and returned to my unit.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 background-color: #D8AF36">
+                <div class="col-md-3">
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
-                <div class="col-md-9 usmc1 p-10 background-color: #D8AF36">
-                    <p> Marine Corps Service Support Schools</p>
-                    <p>Camp LeJeune, North Carolina</p>
-                    <p>1987</p>
-                    <p>Auto and Diesel Mechanics</p>
-                    <p>I arrived at Marine Corps Base Camp LeJeune in August 1987. I attended classes on how to work on
-                        military tactical vehicles. I was in the 3rd to last class to ever be taught to work on the M151
-                        Jeep in the Marine Corps. I graduated in December 1987 and began my career as a vehicle
-                        mechanic.</p>
+                <div class="col-md-9 usmc1 p-.5em">
+                    <p class="usmc1_text"> Marine Corps Service Support Schools</p>
+                    <p class="usmc1_text">Camp LeJeune, North Carolina</p>
+                    <p class="usmc1_text">Auto and Diesel Mechanics</p>
+                    <p class="usmc1_text">1987</p>
+                    <p class="usmc1_text">I arrived at Marine Corps Base Camp LeJeune in August 1987.  I attended classes learning how to work on military, tactical vehicles.  I was in the 3rd to last class to ever be taught to work on the M151 Jeep in the Marine Corps.  I graduated in December 1987 and began my military career as a vehicle mechanic.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 background-color: #066A78">
+                <div class="col-md-3">
                     <img src="Images/Miramar_College_Icon.jpg" alt="Miramar College Icon" id="miramar">
                 </div>
-                <div class="col-md-9 miramar p-10 background-color: #066A78">
-                    <p>Miramar Community College</p>
-                    <p>San Diego, California</p>
-                    <p>1986</p>
-                    <p>Diesel Mechanics</p>
-                    <p>I attended 1 semester at this community college. I worked on a 6V72 Detroit Diesel engine and
-                        learned how to overhaul and reassemble the engine. Towards the end of the semester, I decided to
-                        enlist in the United States Marine Corps.</p>
+                <div class="col-md-9 miramar p-.5em">
+                    <p class="miramar_text">Miramar College</p>
+                    <p class="miramar_text">San Diego, California</p>
+                    <p class="miramar_text">Diesel Mechanics</p>
+                    <p class="miramar_text">1986</p>
+                    <p class="miramar_text">I attended 1 semester at this community college.  I worked on a 6V72 Detroit Diesel engine and learned how to overhaul and reassemble the engine.  Towards the end of the semester, I decided to enlist in the United States Marine Corps.</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 background-color: #1F2C4C">
+                <div class="col-md-3">
                     <img src="Images/Madison_High_Icon.jpg" alt="Madison High School Icon" class="image">
                 </div>
-                <div class="col-md-9 madison p-10 background-color: #1F2C4C">
-                    <p> James Madison High School</p>
-                    <p>San Diego, California</p>
-                    <p>1983 - 1986</p>
-                    <p>Basic and Auto Mechanics</p>
-                    <p>At this San Diego High School I learned basic subjects such as English, Math, History as well as
-                        some specialty subjects such as Wood Working, Metal Shop and Auto Mechanics.</p>
+                <div class="col-md-9 madison p-.5em background-color: #1F2C4C">
+                    <p class="madison_text"> James Madison High School</p>
+                    <p class="madison_text">San Diego, California</p>
+                    <p class="madison_text">Basic and Auto Mechanics</p>
+                    <p class="madison_text">1983 - 1986</p>
+                    <p class="madison_text">At this San Diego High School I learned basic subjects such as English, Math, and History as well as some specialty subjects such as Wood Working, Metal Shop and Auto Mechanics.</p>
                 </div>
             </div>
         </div>
@@ -119,9 +105,8 @@
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
         crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 </html>
