--- a/academic.html
+++ b/academic.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/academic.css">
+    <link rel="stylesheet" href="css/academic.css">
 </head>
 <body>
 <div class="container-fluid p-0 m-0">
