--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
             </section>
         </div>
     </div>
+    <!-- hitwebcounter Code START -->
+    <a href="https://www.hitwebcounter.com" target="_blank">
+        <img src="https://hitwebcounter.com/counter/counter.php?page=8300263&style=0025&nbdigits=7&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" class="counter" /></a>
 </div>
 <script src="js/functions.js"></script>
 <script>document.getElementById("age").innerHTML = calculateAge(new Date())</script>
