fixed broken page

--- a/broken.html
+++ b/broken.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Uh-Oh</title>
     <link rel="stylesheet" href="css/broken.css">
 </head>
 <body>
 <div class="container">
-    <div class="container-fluid">
-        <h1>Please excuse our mess.</h1>
-        <h1>This page is under construction.</h1>
-    </div>
+    <img src="Images/construction.jpeg" alt="Construction" class="image">
+    <h1 class="excuse">Please excuse our mess.</h1>
+    <h1 class="const">This page is under construction.</h1>
 </div>
 </body>
 </html>
