added image of graduation certificate from Codeup

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -33,6 +33,15 @@
     <hr>
     <div class="row">
         <div class="column">
+            <div>
+                <img src="Images/Codeup_Graduation_Certificate.jpg">
+                     alt="Certificate of Completion - Web Development" class="cert">
+            </div>
+            <p class="figCaption">Graduation Certificate From Codeup</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
             <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
                  alt="Certificate of Recognition - Service During The Cold War" class="cert">
             <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)" class="cert">
