--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -33,6 +33,15 @@
     <hr>
     <div class="row">
         <div class="column">
+            <div>
+                <img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development"
+                     class="cert">
+                <p class="figCaption">Graduation Certificate From Codeup</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
             <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
                  alt="Certificate of Recognition - Service During The Cold War" class="cert">
             <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)" class="cert">
@@ -59,8 +68,10 @@
     </div>
     <div class="row">
         <div class="column">
-            <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge" class="cert">
-            <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge" class="cert">
+            <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge"
+                 class="cert">
+            <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge"
+                 class="cert">
         </div>
     </div>
     <div class="row">
@@ -116,7 +127,9 @@
         <li>Air Force Trainer Certificate</li>
         <li>Air Force Trainer/Certifier Certificate</li>
         <li>Driver's License tractor trailer and cargo loading equipment added</li>
-        <li>Aircraft Tow Team Member Certified in Brake Ride, Wing/Tail Walker, Tow Vehicle Operator and Tow Supervisor</li>
+        <li>Aircraft Tow Team Member Certified in Brake Ride, Wing/Tail Walker, Tow Vehicle Operator and Tow
+            Supervisor
+        </li>
         <li>Aircraft Deicer Operator, Trainer and Certifier</li>
         <li>Vehicle Control Non-Commissioned Officer</li>
         <li>Tool Room Non-Commissioned Officer</li>
