rearranged certificates and captions

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -32,63 +32,23 @@
     <h2>Other Awards, Certifications and Decorations</h2>
     <hr>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <div>
                 <img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development"
                      class="cert">
+                <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
+                     alt="Certificate of Recognition - Service During The Cold War" class="cert">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+            <div>
                 <p class="figCaption">Graduation Certificate From Codeup</p>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
-                 alt="Certificate of Recognition - Service During The Cold War" class="cert">
-            <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)" class="cert">
-        </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <p class="figCaption">Certificate of Recognition - Service during the Cold War</p>
-            <p class="figCaption">Honorable Discharge - United States Marine Corps/Marine Corps Reserve
-            </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
-            <img src="Images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
-        </div>
-        <div class="row">
-            <div class="column">
-                <p class="figCaption">M16A2 Rifle Expert Badge</p>
-                <p class="figCaption">M9 9MM Pistol Sharpshooter Badge</p>
+            <div>
+                <p class="figCaption">Certificate of Recognition - Service during the Cold War</p>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge"
-                 class="cert">
-            <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge"
-                 class="cert">
-        </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <p class="figCaption">Honorable Discharge - United States Air Force - Nevada Air National Guard</p>
-            <p class="figCaption">Honorable Discharge - United States Air Force - California Air National Guard</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg"
-                 alt="Air National Guard Honorable Discharge Certificate" class="cert">
-        </div>
-    </div>
-    <div class="row">
-        <div class="column">
-            <p class="figCaption">Honorable Discharge - United States Air Force - New Jersey Air National Guard</p>
         </div>
     </div>
     <div class="row">
@@ -101,8 +61,68 @@
     </div>
     <div class="row">
         <div class="column">
-            <p class="figCaption">Certificate of Appreciation - President of the United States - Barack Obama</p>
-            <p class="figCaption">Certificate of Retirement - Armed Forces of the United States of America</p>
+            <div>
+                <p class="figCaption">Certificate of Appreciation - President of the United States - Barack Obama</p>
+            </div>
+            <div>
+                <p class="figCaption">Certificate of Retirement - Armed Forces of the United States of America</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg"
+                 alt="Air National Guard Honorable Discharge Certificate" class="cert">
+            <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge"
+                 class="cert">
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div>
+                <p class="figCaption">Honorable Discharge - United States Air Force - New Jersey Air National Guard</p>
+            </div>
+            <div>
+                <p class="figCaption">Honorable Discharge - United States Air Force - California Air National Guard</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge"
+                     class="cert">
+                <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)" class="cert">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div>
+                <p class="figCaption">Honorable Discharge - United States Air Force - Nevada Air National Guard</p>
+            </div>
+            <div>
+                <p class="figCaption">Honorable Discharge - United States Marine Corps/Marine Corps Reserve
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
+            <img src="Images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div>
+                <p class="figCaption">M16A2 Rifle Expert Badge</p>
+            </div>
+            <div>
+                <p class="figCaption">M9 9MM Pistol Sharpshooter Badge</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
         </div>
     </div>
     <div class="row">
