--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <p class="link">To see development projects I've worked on, <a href="development_projects.html">click
                         here.</a>
                     </p>
-                    <h3 class="text-primary"><a href="awards_decorations.html">AWARDS AND DECORATIONS</a></h3>
+                    <h3 class="text-primary"><a href="broken.html">AWARDS AND DECORATIONS</a></h3>
                     <p class="link">To see my awards, decorations and personal achievements, <a
-                            href="awards_decorations.html">click here.</a></p>
+                            href="broken.html">click here.</a></p>
                 </div>
             </section>
             <hr class="sand">
