--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Awards & Decorations</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="css/awards_decs.css" rel="stylesheet">
 </head>
 <body class="awards_decs">
@@ -52,7 +51,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <img src="Images/certificate_of%20_appreciation_barak_obama.jpg" class="coabo"
                  alt="Certificate of Appreciation From President Barak Obama">
             <img src="Images/certificate_of_retirement.jpg" class="coret"
@@ -60,7 +59,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <div>
                 <p class="figCaption">Certificate of Appreciation - President of the United States - Barack Obama</p>
             </div>
@@ -70,7 +69,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg"
                  alt="Air National Guard Honorable Discharge Certificate" class="cert">
             <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge"
@@ -78,7 +77,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <div>
                 <p class="figCaption">Honorable Discharge - United States Air Force - New Jersey Air National Guard</p>
             </div>
@@ -86,7 +85,9 @@
                 <p class="figCaption">Honorable Discharge - United States Air Force - California Air National Guard</p>
             </div>
         </div>
-        <div class="row">
+    </div>
+    <div class="row">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <div class="column">
                 <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge"
                      class="cert">
@@ -95,7 +96,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <div>
                 <p class="figCaption">Honorable Discharge - United States Air Force - Nevada Air National Guard</p>
             </div>
@@ -106,13 +107,13 @@
         </div>
     </div>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
             <img src="Images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
         </div>
     </div>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <div>
                 <p class="figCaption">M16A2 Rifle Expert Badge</p>
             </div>
@@ -122,18 +123,14 @@
         </div>
     </div>
     <div class="row">
-        <div class="column">
-        </div>
-    </div>
-    <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <img src="Images/TRAA_Patch.jpeg" class="ncto" alt="Nationally Certified Tow Operator Patch">
             <img src="Images/ASE_Patch.jpeg" class="ase" alt="ASE Parts Technician Patch">
             <img src="Images/AIA_Patch.jpeg" class="aia" alt="AIA Certified Import Parts Specialist Patch">
         </div>
     </div>
     <div class="row">
-        <div class="column">
+        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
             <p class="figCaption">Nationally Certified Tow Operator</p>
             <p class="figCaption">ASE Certified Parts Specialist</p>
             <p class="figCaption">AIA Certified Foreign Car Parts Specialist</p>
@@ -155,5 +152,7 @@
         <li>Tool Room Non-Commissioned Officer</li>
     </ul>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
 </html>
