added capstone project

--- a/development_projects.html
+++ b/development_projects.html
@@ -40,6 +40,8 @@
         <a href="https://github.com/Rafagithub135/Games/tree/main/War">
             <li>War Card Game Web Dev Simplified/McCloskey</li>
         </a>
+        <a href="https://sandlotconnect.xyz:8080/"><li>Sandlot Connect - A social media platform assisting sandlot baseball teams in an area connect and organize teams/leagues.  Wilson/McCloskey/Razo</li>
+        </a>
         <a href="https://github.com/Rafagithub135/cookie">
             <li>Cookie's Place website I'm currently working on.</li>
         </a>
