corrected resume link to point to home page of resume

--- a/development_projects.html
+++ b/development_projects.html
@@ -10,7 +10,7 @@
 <h3>Click On A Link To View A Project</h3>
 <div>
     <ol>
-        <a href="resume.html">
+        <a href="https://rafagithub135.github.io/">
             <li>Resume web page</li>
         </a>
         <a href="https://github.com/MarcusandRalphorg/media-queries">
