added figures and captions to all certificates and awards

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -32,108 +32,85 @@
     <hr>
     <div class="row">
         <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <div>
+                <figure>
                 <img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development"
                      class="cert">
+                    <figcaption>Graduation Certificate From Codeup.</figcaption>
+                </figure>
+                <figure>
                 <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
                      alt="Certificate of Recognition - Service During The Cold War" class="cert">
-            </div>
+                <figcaption>Certificate of Recognition - Service during the Cold War</figcaption>
+                </figure>
         </div>
     </div>
     <div class="row">
         <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <div>
-                <p class="figCaption">Graduation Certificate From Codeup</p>
-            </div>
-            <div>
-                <p class="figCaption">Certificate of Recognition - Service during the Cold War</p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+            <figure>
             <img src="Images/certificate_of%20_appreciation_barak_obama.jpg" class="coabo"
                  alt="Certificate of Appreciation From President Barak Obama">
+            <figcaption>Certificate of Appreciation - President of the United States - Barrack Obama</figcaption>
+            </figure>
+            <figure>
             <img src="Images/certificate_of_retirement.jpg" class="coret"
                  alt="Certificate of Retirement from the United States Air Force">
+            <figcaption>Certificate of Retirement - Armed Forces of the United States of America</figcaption>
+            </figure>
         </div>
     </div>
     <div class="row">
         <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <div>
-                <p class="figCaption">Certificate of Appreciation - President of the United States - Barack Obama</p>
-            </div>
-            <div>
-                <p class="figCaption">Certificate of Retirement - Armed Forces of the United States of America</p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+            <figure>
             <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg"
                  alt="Air National Guard Honorable Discharge Certificate" class="cert">
+            <figcaption>Honorable Discharge - United States Air Force - New Jersey Air National Guard</figcaption>
+            </figure>
+            <figure>
             <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge"
                  class="cert">
+            <figcaption>Honorable Discharge - United States Air Force - California Air National Guard</figcaption>
+            </figure>
         </div>
     </div>
     <div class="row">
         <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <div>
-                <p class="figCaption">Honorable Discharge - United States Air Force - New Jersey Air National Guard</p>
-            </div>
-            <div>
-                <p class="figCaption">Honorable Discharge - United States Air Force - California Air National Guard</p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <div class="column">
+            <figure>
                 <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge"
                      class="cert">
+            <figcaption>Honorable Discharge - United States Air Force - Nevada Air National Guard</figcaption>
+            </figure>
+            <figure>
                 <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)" class="cert">
-            </div>
+            <figcaption>Honorable Discharge - United States Marine Corps/Marine Corps Reserve</figcaption>
+            </figure>
         </div>
     </div>
     <div class="row">
         <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <div>
-                <p class="figCaption">Honorable Discharge - United States Air Force - Nevada Air National Guard</p>
-            </div>
-            <div>
-                <p class="figCaption">Honorable Discharge - United States Marine Corps/Marine Corps Reserve
-                </p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+            <figure>
             <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
+            <figcaption>M16A2 Rifle Expert Badge</figcaption>
+            </figure>
+            <figure>
             <img src="Images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
+            <figcaption>M9 9MM Pistol Sharpshooter Badge</figcaption>
+            </figure>
         </div>
     </div>
     <div class="row">
         <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <div>
-                <p class="figCaption">M16A2 Rifle Expert Badge</p>
-            </div>
-            <div>
-                <p class="figCaption">M9 9MM Pistol Sharpshooter Badge</p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+            <figure>
             <img src="Images/TRAA_Patch.jpeg" class="ncto" alt="Nationally Certified Tow Operator Patch">
+            <figcaption>Nationally Certified Tow Operator</figcaption>
+            </figure>
+            <figure>
             <img src="Images/ASE_Patch.jpeg" class="ase" alt="ASE Parts Technician Patch">
+            <figcaption>ASE Certifiec Parts Specialist</figcaption>
+            </figure>
+            <figure>
             <img src="Images/AIA_Patch.jpeg" class="aia" alt="AIA Certified Import Parts Specialist Patch">
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <p class="figCaption">Nationally Certified Tow Operator</p>
-            <p class="figCaption">ASE Certified Parts Specialist</p>
-            <p class="figCaption">AIA Certified Foreign Car Parts Specialist</p>
+            <figcaption>AIA Certified Foreign Car Parts Specialist</figcaption>
+            </figure>
         </div>
     </div>
     <h2>Awards and Achievements Without Pictures</h2>
