--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>Awards & Decorations</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/awards_decs.css" rel="stylesheet">
 </head>
 <body class="awards_decs">
-<div class="container-fluid">
-    <div class="Ribbons">
-        <h2>Military Ribbons Earned</h2>
+<div>
+    <h1>Awards and Decorations</h1>
+</div>
+<hr>
+<div>
+    <h2>Military Ribbons Earned</h2>
+    <hr>
+</div>
+<div class="container-fluid m-0 p-0">
+    <div class="ribbon-section">
         <hr>
-        <img src="Images/Ribbon_Rack.jpg" alt="Ribbons earned in military service" id="ribbons">
+        <img src="images/Ribbon_Rack.jpg" alt="Ribbons earned in military service">
     </div>
-    <div class="Ribbons-list">
-        <ol>
+    <div>
+        <ol class="ribbons-list">
             <li>Meritorious Service Ribbon With 4 Bronze Oak Leafs</li>
             <li>Air Force Outstanding Unit Ribbon</li>
             <li>United States Marine Corps Good Conduct Medal</li>
@@ -30,89 +38,25 @@
     </div>
     <h2>Other Awards, Certifications and Decorations</h2>
     <hr>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-                <figure>
-                <img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development"
-                     class="cert">
-                    <figcaption>Graduation Certificate From Codeup.</figcaption>
-                </figure>
-                <figure>
-                <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
-                     alt="Certificate of Recognition - Service During The Cold War" class="cert">
-                <figcaption>Certificate of Recognition - Service during the Cold War</figcaption>
-                </figure>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <figure>
-            <img src="Images/certificate_of%20_appreciation_barak_obama.jpg" class="coabo"
-                 alt="Certificate of Appreciation From President Barak Obama">
-            <figcaption>Certificate of Appreciation - President of the United States - Barrack Obama</figcaption>
-            </figure>
-            <figure>
-            <img src="Images/certificate_of_retirement.jpg" class="coret"
-                 alt="Certificate of Retirement from the United States Air Force">
-            <figcaption>Certificate of Retirement - Armed Forces of the United States of America</figcaption>
-            </figure>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <figure>
-            <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg"
-                 alt="Air National Guard Honorable Discharge Certificate" class="cert">
-            <figcaption>Honorable Discharge - United States Air Force - New Jersey Air National Guard</figcaption>
-            </figure>
-            <figure>
-            <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge"
-                 class="cert">
-            <figcaption>Honorable Discharge - United States Air Force - California Air National Guard</figcaption>
-            </figure>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <figure>
-                <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge"
-                     class="cert">
-            <figcaption>Honorable Discharge - United States Air Force - Nevada Air National Guard</figcaption>
-            </figure>
-            <figure>
-                <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)" class="cert">
-            <figcaption>Honorable Discharge - United States Marine Corps/Marine Corps Reserve</figcaption>
-            </figure>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <figure>
-            <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
-            <figcaption>M16A2 Rifle Expert Badge</figcaption>
-            </figure>
-            <figure>
-            <img src="Images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
-            <figcaption>M9 9MM Pistol Sharpshooter Badge</figcaption>
-            </figure>
-        </div>
-    </div>
-    <div class="row">
-        <div class="column col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <figure>
-            <img src="Images/TRAA_Patch.jpeg" class="ncto" alt="Nationally Certified Tow Operator Patch">
-            <figcaption>Nationally Certified Tow Operator</figcaption>
-            </figure>
-            <figure>
-            <img src="Images/ASE_Patch.jpeg" class="ase" alt="ASE Parts Technician Patch">
-            <figcaption>ASE Certifiec Parts Specialist</figcaption>
-            </figure>
-            <figure>
-            <img src="Images/AIA_Patch.jpeg" class="aia" alt="AIA Certified Import Parts Specialist Patch">
-            <figcaption>AIA Certified Foreign Car Parts Specialist</figcaption>
-            </figure>
-        </div>
-    </div>
+    <section class="certs">
+        <img src="images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development">
+        <img src="images/Certificate_Of_Recognition_Cold_War.jpg"
+             alt="Certificate of Recognition - Service During The Cold War">
+        <img src="images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
+        <img src="images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
+        <img src="images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
+        <img src="images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge">
+        <img src="images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge">
+        <img src="images/NJANG_Honorable_Discharge_Certificate.jpg"
+             alt="Air National Guard Honorable Discharge Certificate" class="certl">
+        <img src="images/certificate_of_appreciation_barak_obama.jpg" class="certl"
+             alt="Certificate of Appreciation From President Barak Obama">
+        <img src="images/certificate_of_retirement.jpg" class="certp"
+             alt="Certificate of Retirement from the United States Air Force">
+        <img src="images/TRAA_Patch.jpeg" class="patch" alt="Nationally Certified Tow Operator Patch">
+        <img src="images/ASE_Patch.jpeg" class="patch" alt="ASE Parts Technician Patch">
+        <img src="images/AIA_Patch.jpeg" class="patch" alt="AIA Certified Import Parts Specialist Patch">
+    </section>
     <h2>Awards and Achievements Without Pictures</h2>
     <hr>
     <ul>
@@ -129,7 +73,12 @@
         <li>Tool Room Non-Commissioned Officer</li>
     </ul>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+        crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 </html>
