--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -39,23 +39,23 @@
     <h2>Other Awards, Certifications and Decorations</h2>
     <hr>
     <section class="certs">
-        <img src="images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development">
-        <img src="images/Certificate_Of_Recognition_Cold_War.jpg"
+        <img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development">
+        <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
              alt="Certificate of Recognition - Service During The Cold War">
-        <img src="images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
-        <img src="images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
-        <img src="images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
-        <img src="images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge">
-        <img src="images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge">
-        <img src="images/NJANG_Honorable_Discharge_Certificate.jpg"
+        <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
+        <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
+        <img src="Images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
+        <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge">
+        <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge">
+        <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg"
              alt="Air National Guard Honorable Discharge Certificate" class="certl">
-        <img src="images/certificate_of_appreciation_barak_obama.jpg" class="certl"
+        <img src="Images/certificate_of%20_appreciation_barak_obama.jpg" class="certl"
              alt="Certificate of Appreciation From President Barak Obama">
-        <img src="images/certificate_of_retirement.jpg" class="certp"
+        <img src="Images/certificate_of_retirement.jpg" class="certp"
              alt="Certificate of Retirement from the United States Air Force">
-        <img src="images/TRAA_Patch.jpeg" class="patch" alt="Nationally Certified Tow Operator Patch">
-        <img src="images/ASE_Patch.jpeg" class="patch" alt="ASE Parts Technician Patch">
-        <img src="images/AIA_Patch.jpeg" class="patch" alt="AIA Certified Import Parts Specialist Patch">
+        <img src="Images/TRAA_Patch.jpeg" class="patch" alt="Nationally Certified Tow Operator Patch">
+        <img src="Images/ASE_Patch.jpeg" class="patch" alt="ASE Parts Technician Patch">
+        <img src="Images/AIA_Patch.jpeg" class="patch" alt="AIA Certified Import Parts Specialist Patch">
     </section>
     <h2>Awards and Achievements Without Pictures</h2>
     <hr>
