edited images on awards and decorations page

--- a/awards_decorations.html
+++ b/awards_decorations.html
@@ -40,19 +40,16 @@
     <hr>
     <section class="certs">
         <img src="Images/Codeup_Graduation_Certificate.jpg" alt="Certificate of Completion - Web Development">
+        <img src="Images/certificate_of%20_appreciation_barak_obama.jpg" alt="Certificate of Appreciation From President Barak Obama">
+        <img src="Images/certificate_of_retirement.jpg" alt="Certificate of Retirement from the United States Air Force">
+        <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg" alt="Air National Guard Honorable Discharge Certificate">
+        <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge">
+        <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge">
         <img src="Images/Certificate_Of_Recognition_Cold_War.jpg"
              alt="Certificate of Recognition - Service During The Cold War">
         <img src="Images/USMC_Discharge.jpg" alt="Honorable Discharge Certificate - USMC(R)">
-        <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
         <img src="Images/pistol_sharpshooter.jpeg" alt="9MM Pistol Sharpshooter" class="m9badge">
-        <img src="Images/NVANG_Honorable_Discharge.jpg" alt="Nevada Air National Guard Honorable Discharge">
-        <img src="Images/CAANG_Honorable_Discharge.jpg" alt="California Air National Guard Honorable Discharge">
-        <img src="Images/NJANG_Honorable_Discharge_Certificate.jpg"
-             alt="Air National Guard Honorable Discharge Certificate" class="certl">
-        <img src="Images/certificate_of%20_appreciation_barak_obama.jpg" class="certl"
-             alt="Certificate of Appreciation From President Barak Obama">
-        <img src="Images/certificate_of_retirement.jpg" class="certp"
-             alt="Certificate of Retirement from the United States Air Force">
+        <img src="Images/rifle_expert.jpeg" alt="M-16 Rifle Expert Badge" class="m16Badge">
         <img src="Images/TRAA_Patch.jpeg" class="patch" alt="Nationally Certified Tow Operator Patch">
         <img src="Images/ASE_Patch.jpeg" class="patch" alt="ASE Parts Technician Patch">
         <img src="Images/AIA_Patch.jpeg" class="patch" alt="AIA Certified Import Parts Specialist Patch">
