edited code on index page and made af veteran image a link to usaf page

--- a/index.html
+++ b/index.html
@@ -114,14 +114,13 @@
             <hr class="sand">
             <section class="col-md-12 mx-auto">
                 <div class="d-flex justify-content-center">
-                    <img src="Images/air-force-veteran.png" alt="United States Air Force Veteran" id="afvet">
+                    <a href="https://www.airforce.com"><img src="Images/air-force-veteran.png" alt="United States Air Force Veteran" id="afvet"></a>
                 </div>
             </section>
         </div>
     </div>
-    <!-- hitwebcounter Code START -->
-    <a href="https://www.hitwebcounter.com" target="_blank">
-        <img src="https://hitwebcounter.com/counter/counter.php?page=8300263&style=0025&nbdigits=7&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" class="counter" /></a>
+    <!-- hitwebcounter Code START  <a href="https://www.hitwebcounter.com" target="_blank"></a>-->
+        <img src="https://hitwebcounter.com/counter/counter.php?page=8300263&style=0025&nbdigits=7&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" class="counter" />
 </div>
 <script src="js/functions.js"></script>
 <script>document.getElementById("age").innerHTML = calculateAge(new Date())</script>
