--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Ralph McCloskey Resume</title>
+    <title>Ralph McCloskey's Resume</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -75,7 +75,7 @@
             <div class="col-12">
                 <h3 class="text-primary" id="skills">SKILLS AND ABILITIES</h3>
                 <!--Skills are supposed to come in from variables on functions page-->
-                <!--Ask David or Cody-->
+                <!--Section below contains a section, div, div all add padding and margin.  I need to remove.-->
                 <section>
                     <div class="container">
                         <div class="row row-cols-3">
