updated prospective future schools

--- a/academic.html
+++ b/academic.html
@@ -14,6 +14,30 @@
     <hr>
     <div class="container m-0 p-0">
         <div class="container">
+<!--            <div class="row">-->
+<!--                <div class="col-md-3 background-color: #00225A">-->
+<!--                    <img src="Images/Penn_State_Logo.jpg" alt="Penn State Logo" class="image">-->
+<!--                </div>-->
+<!--                <div class="col-md-9 penn w-100vw p-.5em">-->
+<!--                    <p class="penn_text">Penn State University</p>-->
+<!--                    <p class="penn_text">Harrisburg, Pennsylvania</p>-->
+<!--                    <p class="penn_text">Bachelors Degree - Computer Science</p>-->
+<!--                    <p class="penn_text">2024 - 2026</p>-->
+<!--                    <p class="penn_text"></p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <div class="col-md-3 background-color: #FBC603">-->
+<!--                    <img src="Images/CCP-Logo.jpg" alt="Community College of Philadelphia Logo" class="image">-->
+<!--                </div>-->
+<!--                <div class="col-md-9 ccp w-100vw p-.5em">-->
+<!--                    <p class="ccp_text">Community College of Philadelphia</p>-->
+<!--                    <p class="ccp_text">Philadelphia, Pennsylvania (Virtual)</p>-->
+<!--                    <p class="ccp_text">PreCalculus</p>-->
+<!--                    <p class="ccp_text">2023 - 2023</p>-->
+<!--                    <p class="ccp_text">I took a class in PreCalculus to satisfy a prerequisite to courses I would need to take at Penn State University to get my Computer Science Degree.</p>-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="row">
                 <div class="col-md-3 background-color: #7CB342">
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
