--- a/academic.html
+++ b/academic.html
@@ -19,11 +19,11 @@
 <!--                    <img src="Images/Penn_State_Logo.jpg" alt="Penn State Logo" class="image">-->
 <!--                </div>-->
 <!--                <div class="col-md-9 penn w-100vw p-.5em">-->
-<!--                    <p class="penn_text">Penn State University</p>-->
-<!--                    <p class="penn_text">Harrisburg, Pennsylvania</p>-->
-<!--                    <p class="penn_text">Bachelors Degree - Computer Science</p>-->
-<!--                    <p class="penn_text">2024 - 2026</p>-->
-<!--                    <p class="penn_text"></p>-->
+<!--                    <p class="penn_text text1">Penn State University</p>-->
+<!--                    <p class="penn_text text2">Harrisburg, Pennsylvania</p>-->
+<!--                    <p class="penn_text text2">Bachelors Degree - Computer Science</p>-->
+<!--                    <p class="penn_text text2">2024 - 2026</p>-->
+<!--                    <p class="penn_text text3"></p>-->
 <!--                </div>-->
 <!--            </div>-->
 <!--            <div class="row">-->
@@ -31,11 +31,11 @@
 <!--                    <img src="Images/CCP-Logo.jpg" alt="Community College of Philadelphia Logo" class="image">-->
 <!--                </div>-->
 <!--                <div class="col-md-9 ccp w-100vw p-.5em">-->
-<!--                    <p class="ccp_text">Community College of Philadelphia</p>-->
-<!--                    <p class="ccp_text">Philadelphia, Pennsylvania (Virtual)</p>-->
-<!--                    <p class="ccp_text">PreCalculus</p>-->
-<!--                    <p class="ccp_text">2023 - 2023</p>-->
-<!--                    <p class="ccp_text">I took a class in PreCalculus to satisfy a prerequisite to courses I would need to take at Penn State University to get my Computer Science Degree.</p>-->
+<!--                    <p class="ccp_text text1">Community College of Philadelphia</p>-->
+<!--                    <p class="ccp_text text2">Philadelphia, Pennsylvania (Virtual)</p>-->
+<!--                    <p class="ccp_text text2">PreCalculus</p>-->
+<!--                    <p class="ccp_text text2">2023 - 2023</p>-->
+<!--                    <p class="ccp_text text3">I took a class in PreCalculus to satisfy a prerequisite to courses I would need to take at Penn State University to get my Computer Science Degree.</p>-->
 <!--                </div>-->
 <!--            </div>-->
             <div class="row">
@@ -43,11 +43,11 @@
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
                 </div>
                 <div class="col-md-9 codeup w-100vw p-.5em">
-                    <p class="codeup_text">Codeup</p>
-                    <p class="codeup_text">San Antonio, Texas (Virtual)</p>
-                    <p class="codeup_text">Full Stack Web Developer</p>
-                    <p class="codeup_text">2022 - 2023</p>
-                    <p class="codeup_text">At Codeup, I received education and training as a Full Stack Web Developer.  I have become quite proficient in front end creation and am currently working on back-end and full program creation.</p>
+                    <p class="codeup_text text1">Codeup</p>
+                    <p class="codeup_text text2">San Antonio, Texas (Virtual)</p>
+                    <p class="codeup_text text2">Full Stack Web Developer</p>
+                    <p class="codeup_text text2">2022 - 2023</p>
+                    <p class="codeup_text text3">At Codeup, I received education and training as a Full Stack Web Developer.  I have become quite proficient in front end creation and am currently working on back-end and full program creation.</p>
                 </div>
             </div>
             <div class="row">
@@ -55,11 +55,11 @@
                     <img src="Images/DeVry_Icon.jpg" alt="DeVry Icon" class="image">
                 </div>
                 <div class="col-md-9 devry w-100vw p-.5em">
-                    <p class="devry_text"> DeVry College of New York</p>
-                    <p class="devry_text">New York City, New York</p>
-                    <p class="devry_text">Computer Networking and basic classes</p>
-                    <p class="devry_text">2015 - 2020</p>
-                    <p class="devry_text">At DeVry College of New York I took many basic classes needed for entry into college courses.  I was unable to complete my degree as courses I needed to take were not compatible with the veteran program I was attending under.</p>
+                    <p class="devry_text text1"> DeVry College of New York</p>
+                    <p class="devry_text text2">New York City, New York</p>
+                    <p class="devry_text text2">Computer Networking and basic classes</p>
+                    <p class="devry_text text2">2015 - 2020</p>
+                    <p class="devry_text text3">At DeVry College of New York I took many basic classes needed for entry into college courses.  I was unable to complete my degree as courses I needed to take were not compatible with the veteran program I was attending under.</p>
                 </div>
             </div>
             <div class="row">
@@ -67,11 +67,11 @@
                     <img src="Images/CCAF_Icon.jpg" alt="Community College Of The Air Force Icon" class="image">
                 </div>
                 <div class="col-md-9 ccaf">
-                    <p class="ccaf_text">Community College of The Air Force</p>
-                    <p class="ccaf_text">Various Locations</p>
-                    <p class="ccaf_text">Basic, Airman Leadership School, Aviation Mechanic, Aerial Port</p>
-                    <p class="ccaf_text">1997 – 2012</p>
-                    <p class="ccaf_text">Throughout my career in the Air National Guard, in Nevada, California and New Jersey, I attained many skills.  I changed careers from Aerial Port back to vehicle mechanics and eventually into aircraft maintenance.  The military has taught me many skills in leadership, and working either alone or with a team to accomplish tasks and goals to complete a mission.</p>
+                    <p class="ccaf_text text1">Community College of The Air Force</p>
+                    <p class="ccaf_text text2">Various Locations</p>
+                    <p class="ccaf_text text2">Basic, Airman Leadership School, Aviation Mechanic, Aerial Port</p>
+                    <p class="ccaf_text text2">1997 – 2012</p>
+                    <p class="ccaf_text text3">Throughout my career in the Air National Guard, in Nevada, California and New Jersey, I attained many skills.  I changed careers from Aerial Port back to vehicle mechanics and eventually into aircraft maintenance.  The military has taught me many skills in leadership, and working alone, with a team, or as a leader of a team to accomplish tasks and goals to complete a mission.</p>
                 </div>
             </div>
             <div class="row">
@@ -79,11 +79,11 @@
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
                 <div class="col-md-9 usmc2 p-.5em">
-                    <p class="usmc2_text"> Marine Corps Service Support Schools</p>
-                    <p class="usmc2_text">29 Palms, California</p>
-                    <p class="usmc2_text">M936 Wrecker Operator</p>
-                    <p class="usmc2_text">1991</p>
-                    <p class="usmc2_text">As Operation Desert Storm was winding down, I was sent to Wrecker Operator class in 29 Palms, California.  I learned basic recovery techniques, welding (using arc welders and oxygen/acetylene torch), among other skills.  I graduated and returned to my unit.</p>
+                    <p class="usmc2_text text1"> Marine Corps Service Support Schools</p>
+                    <p class="usmc2_text text2">29 Palms, California</p>
+                    <p class="usmc2_text text2">M936 Wrecker Operator</p>
+                    <p class="usmc2_text text2">1991</p>
+                    <p class="usmc2_text text3">As Operation Desert Storm was winding down, I was sent to Wrecker Operator class in 29 Palms, California.  I learned basic recovery techniques, welding (using arc welders and oxygen/acetylene torch), among other skills.  I graduated and returned to my unit.</p>
                 </div>
             </div>
             <div class="row">
@@ -91,11 +91,11 @@
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
                 <div class="col-md-9 usmc1 p-.5em">
-                    <p class="usmc1_text"> Marine Corps Service Support Schools</p>
-                    <p class="usmc1_text">Camp LeJeune, North Carolina</p>
-                    <p class="usmc1_text">Auto and Diesel Mechanics</p>
-                    <p class="usmc1_text">1987</p>
-                    <p class="usmc1_text">I arrived at Marine Corps Base Camp LeJeune in August 1987.  I attended classes learning how to work on military, tactical vehicles.  I was in the 3rd to last class to ever be taught to work on the M151 Jeep in the Marine Corps.  I graduated in December 1987 and began my military career as a vehicle mechanic.</p>
+                    <p class="usmc1_text text1"> Marine Corps Service Support Schools</p>
+                    <p class="usmc1_text text2">Camp LeJeune, North Carolina</p>
+                    <p class="usmc1_text text2">Auto and Diesel Mechanics</p>
+                    <p class="usmc1_text text2">1987</p>
+                    <p class="usmc1_text text3">I arrived at Marine Corps Base Camp LeJeune in August 1987.  I attended classes learning how to work on military, tactical vehicles.  I was in the 3rd to last class to ever be taught to work on the M151 Jeep in the Marine Corps.  I graduated in December 1987 and began my military career as a vehicle mechanic.</p>
                 </div>
             </div>
             <div class="row">
@@ -103,11 +103,11 @@
                     <img src="Images/Miramar_College_Icon.jpg" alt="Miramar College Icon" id="miramar">
                 </div>
                 <div class="col-md-9 miramar p-.5em">
-                    <p class="miramar_text">Miramar College</p>
-                    <p class="miramar_text">San Diego, California</p>
-                    <p class="miramar_text">Diesel Mechanics</p>
-                    <p class="miramar_text">1986</p>
-                    <p class="miramar_text">I attended 1 semester at this community college.  I worked on a 6V72 Detroit Diesel engine and learned how to overhaul and reassemble the engine.  Towards the end of the semester, I decided to enlist in the United States Marine Corps.</p>
+                    <p class="miramar_text text1">Miramar College</p>
+                    <p class="miramar_text text2">San Diego, California</p>
+                    <p class="miramar_text text2">Diesel Mechanics</p>
+                    <p class="miramar_text text2">1986</p>
+                    <p class="miramar_text text3">I attended 1 semester at this community college.  I worked on a 6V72 Detroit Diesel engine and learned how to overhaul and reassemble the engine.  Towards the end of the semester, I decided to enlist in the United States Marine Corps.</p>
                 </div>
             </div>
             <div class="row">
@@ -115,11 +115,11 @@
                     <img src="Images/Madison_High_Icon.jpg" alt="Madison High School Icon" class="image">
                 </div>
                 <div class="col-md-9 madison p-.5em background-color: #1F2C4C">
-                    <p class="madison_text"> James Madison High School</p>
-                    <p class="madison_text">San Diego, California</p>
-                    <p class="madison_text">Basic and Auto Mechanics</p>
-                    <p class="madison_text">1983 - 1986</p>
-                    <p class="madison_text">At this San Diego High School I learned basic subjects such as English, Math, and History as well as some specialty subjects such as Wood Working, Metal Shop and Auto Mechanics.</p>
+                    <p class="madison_text text1"> James Madison High School</p>
+                    <p class="madison_text text2">San Diego, California</p>
+                    <p class="madison_text text2">Basic and Auto Mechanics</p>
+                    <p class="madison_text text2">1983 - 1986</p>
+                    <p class="madison_text text3">At this San Diego High School I learned basic subjects such as English, Math, and History as well as some specialty subjects such as Wood Working, Metal Shop and Auto Mechanics.</p>
                 </div>
             </div>
         </div>
