centered images on academic page

--- a/academic.html
+++ b/academic.html
@@ -15,7 +15,7 @@
     <div class="container m-0 p-0">
         <div class="container">
 <!--            <div class="row">-->
-<!--                <div class="col-md-3 background-color: #00225A">-->
+<!--                <div class="col-md-3 ctrimg background-color: #00225A">-->
 <!--                    <img src="Images/Penn_State_Logo.jpg" alt="Penn State Logo" class="image">-->
 <!--                </div>-->
 <!--                <div class="col-md-9 penn w-100vw p-.5em">-->
@@ -27,7 +27,7 @@
 <!--                </div>-->
 <!--            </div>-->
 <!--            <div class="row">-->
-<!--                <div class="col-md-3 background-color: #FBC603">-->
+<!--                <div class="col-md-3 ctrimg background-color: #FBC603">-->
 <!--                    <img src="Images/CCP-Logo.jpg" alt="Community College of Philadelphia Logo" class="image">-->
 <!--                </div>-->
 <!--                <div class="col-md-9 ccp w-100vw p-.5em">-->
@@ -39,7 +39,7 @@
 <!--                </div>-->
 <!--            </div>-->
             <div class="row">
-                <div class="col-md-3 background-color: #7CB342">
+                <div class="col-md-3 ctrimg background-color: #7CB342">
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
                 </div>
                 <div class="col-md-9 codeup w-100vw p-.5em">
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 ctrimg">
                     <img src="Images/DeVry_Icon.jpg" alt="DeVry Icon" class="image">
                 </div>
                 <div class="col-md-9 devry w-100vw p-.5em">
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 ctrimg">
                     <img src="Images/CCAF_Icon.jpg" alt="Community College Of The Air Force Icon" class="image">
                 </div>
                 <div class="col-md-9 ccaf">
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 ctrimg">
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
                 <div class="col-md-9 usmc2 p-.5em">
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 ctrimg">
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
                 <div class="col-md-9 usmc1 p-.5em">
@@ -99,7 +99,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 ctrimg">
                     <img src="Images/Miramar_College_Icon.jpg" alt="Miramar College Icon" id="miramar">
                 </div>
                 <div class="col-md-9 miramar p-.5em">
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 ctrimg">
                     <img src="Images/Madison_High_Icon.jpg" alt="Madison High School Icon" class="image">
                 </div>
                 <div class="col-md-9 madison p-.5em background-color: #1F2C4C">
